[tool.poetry]
name = "board"
version = "0.1.0"
description = "test-assignment"
authors = ["Lev Alekseev <futuristjp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.26.0"}
pydantic = {extras = ["email"], version = "^2.5.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
